Enhance OdemesController and views for Ogrenci details
- Updated `Index` method to include `Ogrenci` navigation property for detailed data display.
- Modified `Edit` method to simplify model state handling and directly set entity state.
- Added virtual `Ogrenci` property in `Odeme.cs` for easier access to related data.
- Updated `Index.cshtml` to show `Ogrenci` name instead of ID for better user experience.

--- a/DershaneTakipSistemi/Views/Odemes/Index.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.OdemeTarihi)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OgrenciId)
+                @Html.DisplayNameFor(model => model.Ogrenci)
             </th>
             <th></th>
         </tr>
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.OdemeTarihi)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OgrenciId)
+                @Html.DisplayFor(modelItem => item.Ogrenci.AdSoyad)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
