--- a/DershaneTakipSistemi/Views/Odemes/Create.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Create.cshtml
@@ -4,25 +4,24 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Odeme</h4>
+<h1>Yeni Öğrenci Oluştur</h1>
+<h4>Öğrenci Bilgileri</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Tutar" class="control-label"></label>
                 <input asp-for="Tutar" class="form-control" />
                 <span asp-validation-for="Tutar" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="OdemeTarihi" class="control-label"></label>
                 <input asp-for="OdemeTarihi" class="form-control" />
                 <span asp-validation-for="OdemeTarihi" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="OgrenciId" class="control-label">Öğrenci</label> @* <-- Label metnini düzeltebilirsin *@
                 <select asp-for="OgrenciId" class="form-control" asp-items="ViewBag.OgrenciId">
                     @* <-- DEĞİŞİKLİK BURADA *@
@@ -30,15 +29,15 @@
                 </select>
                 <span asp-validation-for="OgrenciId" class="text-danger"></span> @* <-- Validasyon kalsın *@
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mb-3">
+                <input type="submit" value="Oluştur" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Listeye Geri Dön</a>
 </div>
 
 @section Scripts {
