--- a/DershaneTakipSistemi/Views/Odemes/Delete.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Delete.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h1>Öğrenci Sil</h1>
+<h3>Bu öğrenciyi silmek istediğinizden emin misiniz?</h3>
 <div>
-    <h4>Odeme</h4>
-    <hr />
+    <h4>Silinecek Öğrenci Bilgileri</h4>    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tutar)
@@ -33,7 +31,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Sil" class="btn btn-danger" />
+        <a asp-action="Index">Listeye Geri Dön</a>
     </form>
 </div>
