--- a/DershaneTakipSistemi/Views/Odemes/Edit.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Edit.cshtml
@@ -4,26 +4,25 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Odeme</h4>
+<h1>Öğrenci Bilgilerini Düzenle</h1>
 <hr />
 <div class="row">
+    <h4>Öğrenci Bilgileri</h4>
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Tutar" class="control-label"></label>
                 <input asp-for="Tutar" class="form-control" />
                 <span asp-validation-for="Tutar" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="OdemeTarihi" class="control-label"></label>
                 <input asp-for="OdemeTarihi" class="form-control" />
                 <span asp-validation-for="OdemeTarihi" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="OgrenciId" class="control-label">Öğrenci</label>
                 <select asp-for="OgrenciId" class="form-control" asp-items="ViewBag.OgrenciId">
                     @* Edit sayfasında genellikle boş seçenek eklemeyiz, direkt mevcut değer seçili gelir. *@
@@ -31,15 +30,15 @@
                 </select>
                 <span asp-validation-for="OgrenciId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mb-3">
+                <input type="submit" value="Kaydet" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Listeye Geri Dön</a>
 </div>
 
 @section Scripts {
