--- a/DershaneTakipSistemi/Views/Ogrencis/Create.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Create.cshtml
@@ -4,38 +4,37 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Ogrenci</h4>
+<h1>Yeni Öğrenci Oluştur</h1>
+<h4>Öğrenci Bilgileri</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="AdSoyad" class="control-label"></label>
                 <input asp-for="AdSoyad" class="form-control" />
                 <span asp-validation-for="AdSoyad" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="TCKimlik" class="control-label"></label>
                 <input asp-for="TCKimlik" class="form-control" />
                 <span asp-validation-for="TCKimlik" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="KayitTarihi" class="control-label"></label>
                 <input asp-for="KayitTarihi" class="form-control" />
                 <span asp-validation-for="KayitTarihi" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mb-3">
+                <input type="submit" value="Oluştur" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Listeye Geri Dön</a>
 </div>
 
 @section Scripts {
