--- a/DershaneTakipSistemi/Views/Ogrencis/Details.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Details.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
+<h1>Öğrenci Detayları</h1>
 <div>
-    <h4>Ogrenci</h4>
-    <hr />
+    <h4>Öğrenci Bilgileri</h4>    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AdSoyad)
@@ -31,6 +29,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Düzenle</a>
+    <a asp-action="Index">Listeye Geri Dön</a>
 </div>
