Refactor payment management in OdemesController
Updated `OdemesController` methods to include null checks and eager loading for related entities. Established foreign key relationships and indexes in the database schema. Modified `Ogrenci` and `Odeme` models with validation attributes and updated views to reflect the shift from student to payment management. Added migration files to apply schema changes.

--- a/DershaneTakipSistemi/Views/Odemes/Create.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Create.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Yeni Öğrenci Oluştur</h1>
-<h4>Öğrenci Bilgileri</h4>
+<h1>Yeni Ödeme Kaydı</h1>
+<h4>Ödeme Bilgileri</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
