--- a/DershaneTakipSistemi/Views/Odemes/Edit.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Edit.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Öğrenci Bilgilerini Düzenle</h1>
+<h1>Ödeme Bilgilerini Düzenle</h1>
 <hr />
 <div class="row">
-    <h4>Öğrenci Bilgileri</h4>
+    <h4>Ödeme Bilgileri</h4>
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
