--- a/DershaneTakipSistemi/Views/Odemes/Index.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DershaneTakipSistemi.Models.Odeme>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Ödemeler";
 }
 
-<h1>Ödemeler</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary mb-3">Yeni Ödeme Ekle</a>
