--- a/DershaneTakipSistemi/Views/Ogrencis/Create.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DershaneTakipSistemi.Models.Ogrenci
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Yeni Öğrenci Oluştur";
 }
 
-<h1>Yeni Öğrenci Oluştur</h1>
+<h1>@ViewData["Title"]</h1>
 <h4>Öğrenci Bilgileri</h4>
 <hr />
 <div class="row">
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Listeye Geri Dön</a>
+    <a asp-action="Index" class="btn btn-primary">Listeye Geri Dön</a>
 </div>
 
 @section Scripts {
