--- a/DershaneTakipSistemi/Views/Odemes/Details.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DershaneTakipSistemi.Models.Odeme
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Öğrenci Detayları";
 }
 
-<h1>Öğrenci Detayları</h1
+<h1>@ViewData["Title"]</h1
 <div>
 <h4>Ödeme Bilgileri</h4>
     <hr />
@@ -29,7 +29,10 @@
         </dd>
        
     </dl>
-</div>
+
 <div>
-<a asp-action="Edit" asp-route-id="@Model?.Id">Düzenle</a>
-<a asp-action="Index">Listeye Geri Dön</a></div>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Düzenle</a> | @* Buton stili ekledim *@
+    <a asp-action="Index" class="btn btn-primary">Listeye Geri Dön</a>
+</div>
+</div>
+
