--- a/DershaneTakipSistemi/Views/Odemes/Edit.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DershaneTakipSistemi.Models.Odeme
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Ödeme Bilgilerini Düzenle";
 }
 
-<h1>Ödeme Bilgilerini Düzenle</h1>
+<h1>@ViewData["Title"]</h1>
 <hr />
 <div class="row">
     <h4>Ödeme Bilgileri</h4>
@@ -38,7 +38,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Listeye Geri Dön</a>
+    <a asp-action="Index" class="btn btn-primary">Listeye Geri Dön</a>
 </div>
 
 @section Scripts {
