--- a/DershaneTakipSistemi/Views/Ogrencis/Details.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Details.cshtml
@@ -1,34 +1,72 @@
 ﻿@model DershaneTakipSistemi.Models.Ogrenci
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Öğrenci Detayları";
 }
 
-<h1>Öğrenci Detayları</h1>
+<h1>@ViewData["Title"]</h1>
+
 <div>
-    <h4>Öğrenci Bilgileri</h4>    <hr />
+    <h4>Öğrenci Bilgileri</h4>
+    <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        @* Mevcut öğrenci bilgileri (AdSoyad, TCKimlik, KayitTarihi) burada gösteriliyor *@
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AdSoyad)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AdSoyad)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TCKimlik)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TCKimlik)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.KayitTarihi)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.KayitTarihi)
         </dd>
     </dl>
 </div>
+
+<hr /> @* Araya bir çizgi ekleyelim *@
+
+<!-- ===== YENİ EKLENEN ÖDEME LİSTESİ BÖLÜMÜ ===== -->
+<h4>Öğrencinin Ödemeleri</h4>
+
+@if (Model.Odemeler != null && Model.Odemeler.Any()) // Model.Odemeler null değilse VE içinde eleman varsa
+{
+    <table class="table table-striped table-sm mt-3">
+        @* Daha küçük ve üstten boşluklu tablo *@
+        <thead>
+            <tr>
+                <th>Ödeme Tarihi</th>
+                <th>Tutar</th>
+                @* İstersen buraya başka Odeme alanları da ekleyebilirsin *@
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var odeme in Model.Odemeler.OrderByDescending(o => o.OdemeTarihi)) // Ödemeleri tarihe göre tersten sırala
+            {
+                <tr>
+                    <td>@odeme.OdemeTarihi.ToShortDateString()</td> @* Tarihi kısa formatta göster *@
+                    <td>@odeme.Tutar.ToString("C")</td> @* Tutarı para birimi formatında göster (C) *@
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else // Eğer hiç ödeme yoksa veya liste null ise
+{
+    <p>Bu öğrenciye ait kayıtlı ödeme bulunmamaktadır.</p>
+}
+<!-- =============================================== -->
+
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Düzenle</a>
-    <a asp-action="Index">Listeye Geri Dön</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Düzenle</a> | @* Buton stili ekledim *@
+    <a asp-action="Index" class="btn btn-primary">Listeye Geri Dön</a>
 </div>
