--- a/DershaneTakipSistemi/Views/Ogrencis/Edit.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DershaneTakipSistemi.Models.Ogrenci
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Öğrenci Bilgilerini Düzenle";
 }
 
-<h1>Öğrenci Bilgilerini Düzenle</h1>
+<h1>@ViewData["Title"]</h1>
 <h4>Öğrenci Bilgileri</h4>
 <hr />
 <div class="row">
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Listeye Geri Dön</a>
+    <a asp-action="Index" class="btn btn-primary">Listeye Geri Dön</a>
 </div>
 
 @section Scripts {
