--- a/DershaneTakipSistemi/Views/Ogrencis/Index.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DershaneTakipSistemi.Models.Ogrenci>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Öğrenciler";
 }
 
-<h1>Öğrenciler</h1>
+<h1>@ViewData["Title"]</h1>
 <p>
     <a asp-action="Create" class="btn btn-primary mb-3">Yeni Öğrenci Ekle</a>
 </p>
