Refactor student model and update related views
- Added `OgrenciSelectListesiniYukle` method in `OdemesController.cs` to load students into a `SelectList`.
- Modified `Create` and `Edit` methods in `OgrencisController.cs` to bind to separate `Ad` and `Soyad` properties.
- Introduced migration file `20250503144940_UpdateOgrenciModelWithDetails.Designer.cs` to update the `Ogrenci` model schema, removing `AdSoyad` and adding new properties.
- Updated `ApplicationDbContextModelSnapshot.cs` to reflect the new `Ogrenci` schema and its relationship with `Odeme`.
- Adjusted `Ogrenci.cs` model to separate `Ad` and `Soyad`, adding a read-only `AdSoyad` property for display.
- Updated views (`Delete.cshtml`, `Details.cshtml`, `Index.cshtml`, `Create.cshtml`, `Edit.cshtml`) to display `Ad` and `Soyad` separately.
- Changed navigation link text in `_Layout.cshtml` from "Privacy" to "Hakkında".
- Updated `site.css` to change the background image to `intersection.webp`.
- Added `intersection.webp` and deleted `moroccan-flower.png` and `pink-flowers.webp`.

--- a/DershaneTakipSistemi/Views/Odemes/Delete.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Delete.cshtml
@@ -24,8 +24,9 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Ogrenci)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ogrenci.AdSoyad)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.Ogrenci.AdSoyad) // Eski hali *@
+            @Html.DisplayFor(model => model.Ogrenci.Ad) @Html.DisplayFor(model => model.Ogrenci.Soyad) @* Yeni hali *@
         </dd>
     </dl>
     
