--- a/DershaneTakipSistemi/Views/Odemes/Details.cshtml
+++ b/DershaneTakipSistemi/Views/Odemes/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Öğrenci Detayları";
 }
 
-<h1>@ViewData["Title"]</h1
+<h1>@ViewData["Title"]</h1>
 <div>
 <h4>Ödeme Bilgileri</h4>
     <hr />
@@ -13,7 +13,8 @@
             @Html.DisplayNameFor(model => model.Ogrenci)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ogrenci.AdSoyad)
+         @* @Html.DisplayFor(model => model.Ogrenci.AdSoyad) // Eski hali *@
+            @Html.DisplayFor(model => model.Ogrenci.Ad) @Html.DisplayFor(model => model.Ogrenci.Soyad) @* Yeni hali *@
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tutar)
