--- a/DershaneTakipSistemi/Views/Ogrencis/Index.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>@ViewData["Title"]</h1>
+
 <p>
     <a asp-action="Create" class="btn btn-primary mb-3">Yeni Öğrenci Ekle</a>
 </p>
@@ -12,35 +13,48 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.AdSoyad)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().AdSoyad) <!-- Birleşik AdSoyad -->
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TCKimlik)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().TCKimlik)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.KayitTarihi)
+                @Html.DisplayNameFor(model => model.FirstOrDefault().CepTelefonu)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().KayitTarihi)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().AktifMi)
             </th>
             <th>İşlemler</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdSoyad)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TCKimlik)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.KayitTarihi)
-            </td>
-            <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AdSoyad) <!-- Birleşik AdSoyad -->
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TCKimlik)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CepTelefonu)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.KayitTarihi)
+                </td>
+                <td>
+                    @(item.AktifMi ? "Evet" : "Hayır") <!-- AktifMi gösterimi -->
+                </td>
+                <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary me-1">Düzenle</a>
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-info me-1">Detaylar</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger">Sil</a>
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
