--- a/DershaneTakipSistemi/Views/Shared/_Layout.cshtml
+++ b/DershaneTakipSistemi/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DershaneTakipSistemi</a>
+
+                <div><partial name="_LoginPartial" /></div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,9 +25,8 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Ana Sayfa</a> @* Metni değiştirdim *@
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Hakkında</a>
                                 </li>
-                <!-- ===== YENİ EKLENEN LİNKLER ===== -->
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Ogrencis" asp-action="Index">Öğrenciler</a>
                                 </li>
@@ -33,9 +34,9 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Odemes" asp-action="Index">Ödemeler</a>
                                 </li>
                                 <!-- ================================ -->
-                        </div>
-                    </ul>
-                    <partial name="_LoginPartial" />
+					</ul>
+				</div>
+                    
                 </div>
             </div>
         </nav>
@@ -46,9 +47,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted">
         <div class="container">
-            &copy; 2025 - DershaneTakipSistemi - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - DershaneTakipSistemi - <a asp-area="" asp-controller="Home" asp-action="Privacy">Hakkında</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
