--- a/DershaneTakipSistemi/Views/Ogrencis/Create.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Create.cshtml
@@ -73,6 +73,14 @@
                         <span asp-validation-for="KayitTarihi" class="text-danger"></span>
                     </div>
                 </div>
+                @* Views/Ogrencis/Create.cshtml veya Edit.cshtml içinde *@
+                <div class="form-group mb-3">
+                    <label asp-for="SinifId" class="control-label"></label>
+                    <select asp-for="SinifId" class="form-control" asp-items="ViewBag.SinifId">
+                        <option value="">-- Sınıf Seçiniz --</option> @* Boş seçenek *@
+                    </select>
+                    <span asp-validation-for="SinifId" class="text-danger"></span>
+                </div>
                 <div class="col-md-6">
                     <div class="form-group form-check mb-3 pt-4">
                         @* Checkbox'ı hizalamak için pt-4 eklendi *@
