--- a/DershaneTakipSistemi/Views/Ogrencis/Details.cshtml
+++ b/DershaneTakipSistemi/Views/Ogrencis/Details.cshtml
@@ -29,6 +29,13 @@
             @Html.DisplayFor(model => model.TCKimlik)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Sinifi)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Sinifi.Ad)
+            @* Null kontrolü: @(Model.Sinifi != null ? Model.Sinifi.Ad : "Sınıfa Atanmamış") *@
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DogumTarihi)
         </dt>
         <dd class="col-sm-10">
