--- a/DershaneTakipSistemi/Views/Shared/_Layout.cshtml
+++ b/DershaneTakipSistemi/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                             @* <-- YENİ EKLENEN LİNK *@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personels" asp-action="Index">Personel</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Sinifs" asp-action="Index">Sınıflar</a>
+                        </li>
                         <!-- ================================ -->
                     </ul>
                     <partial name="_LoginPartial" />
