--- a/DershaneTakipSistemi/Views/Sinifs/Create.cshtml
+++ b/DershaneTakipSistemi/Views/Sinifs/Create.cshtml
@@ -12,7 +12,15 @@
     <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+           
+            @* Views/Siniflar/Create.cshtml veya Edit.cshtml içinde *@
+            <div class="form-group mb-3">
+                <label asp-for="OgretmenPersonelId" class="control-label"></label>
+                <select asp-for="OgretmenPersonelId" class="form-control" asp-items="ViewBag.OgretmenPersonelId">
+                    <option value="">-- Öğretmen Seçiniz --</option> @* Boş seçenek *@
+                </select>
+                <span asp-validation-for="OgretmenPersonelId" class="text-danger"></span>
+            </div>
             <div class="form-group mb-3">
                 <label asp-for="Ad" class="control-label"></label>
                 <input asp-for="Ad" class="form-control" />
